<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/soft_cream"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/temp_back">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,UselessParent">

                <EditText
                    android:id="@+id/searchBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"

                    android:fontFamily="@font/mvboli"
                    android:gravity="left"
                    android:hint="@string/search"
                    android:inputType="text"
                    android:imeOptions="actionSearch"
                    android:textSize="15sp"
                    tools:ignore="DuplicateSpeakableTextCheck,RtlCompat,RtlHardcoded,TouchTargetSizeCheck,UnusedAttribute"
                    android:importantForAutofill="no" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/search_back"
                    android:text="@string/search"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    tools:ignore="DuplicateSpeakableTextCheck,RtlCompat,SmallSp,TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/City"
            android:fontFamily="@font/mvboli"
            android:textSize="35sp"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/temp_back"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/temp"
                android:textSize="50sp"
                android:fontFamily="@font/mvboli"
                tools:ignore="UnusedAttribute" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mintemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/min_temp"
                    android:fontFamily="@font/mvboli"
                    tools:ignore="RtlCompat,UnusedAttribute" />

                <TextView
                    android:id="@+id/maxtemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/max_temp"
                    tools:ignore="RtlCompat,RtlHardcoded,UnusedAttribute"
                    android:fontFamily="@font/mvboli"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/sunrise_back"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="RtlCompat">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="70dp"
                            android:layout_height="80dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_marginBottom="-20dp"
                            android:contentDescription="@string/des"
                            app:srcCompat="@drawable/test" />

                        <TextView
                            android:id="@+id/sunrise"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/mvboli"
                            android:gravity="center"
                            android:text="@string/sunrise"
                            android:textSize="15sp"
                            tools:ignore="TextContrastCheck,UnusedAttribute" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/sunset_back"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="RtlCompat">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="70dp"
                            android:layout_height="80dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_marginBottom="-20dp"
                            android:contentDescription="@string/des"
                            app:srcCompat="@drawable/test2" />

                        <TextView
                            android:id="@+id/sunset"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/mvboli"
                            android:gravity="center"
                            android:text="@string/sunset"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            tools:ignore="UnusedAttribute" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/wind_back"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="5dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/des"
                        app:srcCompat="@drawable/wind"
                        tools:ignore="ImageContrastCheck,RtlCompat" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/mvboli"
                        android:text="@string/wind"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="RtlCompat,TextContrastCheck,UnusedAttribute" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/weather_back"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="RtlCompat">

                <ImageView
                    android:id="@+id/weatherCon"
                    android:layout_width="90dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/des"
                    app:srcCompat="@drawable/few_clouds" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/mvboli"
                    android:gravity="center"
                    android:text="@string/weather"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck,TextContrastCheck,UnusedAttribute" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/humidityBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangle1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/mvboli"
            android:gravity="center|top"
            android:text="@string/humidity"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:ignore="TextContrastCheck,UnusedAttribute" />
    </LinearLayout>

</LinearLayout>